# youpipe

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
.opencode/: opencode.json
benches/: async_vs_tokio.rs  channel_bench.rs  io_async.rs  mixed_load.rs  sync_vs_rayon.rs  unbalanced.rs
docs/: ARCHITECTURE-zh_CN.md  ARCHITECTURE.md  README-zh_CN.md
examples/: README.md  async_io.rs  basic_par_map.rs  basic_pipe.rs  cancellation.rs  fence.rs  fused_pipeline.rs  fused_vs_rayon.rs  hotpath_profile.rs  mixed_cpu_io.rs  nested_expand.rs  scoped.rs  scoped_lookup.rs  stream_chain.rs  stream_pipeline.rs  try_map.rs  try_par_map.rs  unbalanced.rs
examples/file-encrypt-bench/src/: engine_youpipe.rs
examples/pipeline_bench/: README.md
examples/pipeline_bench/src/: main.rs
perf/file-encrypt-bench/: Cargo.toml  README.txt
perf/file-encrypt-bench/src/: cipher.rs  engine_rayon.rs  engine_tokio.rs  main.rs  workload.rs
perf/hotpath-profile/: Cargo.toml
perf/hotpath-profile/src/: main.rs
perf/pipeline-bench/: Cargo.toml  README.md
perf/pipeline-bench/src/: main.rs
src/: lib.rs  prelude.rs  util.rs
src/builder/: config.rs  mod.rs  typed.rs
src/builder/typed/: fused.rs  mod.rs  slots.rs  stream.rs  traits.rs
src/executor/: mod.rs  scheduler.rs
src/executor/async_pool/: driver.rs  mod.rs
src/executor/compute/: mod.rs  worker.rs
src/graph/: edge.rs  mod.rs  node.rs
src/handoff/: batcher.rs  channel.rs  mod.rs  notify.rs  ring_buffer.rs
src/pool/: job.rs  join.rs  latch.rs  mod.rs  registry.rs  sleep.rs  sleep_mask.rs  unwind.rs
src/runtime/: compio.rs  mod.rs  tokio.rs  tokio_impl.rs  traits.rs
src/scope/: mod.rs  pipeline_scope.rs
src/state/: fence.rs  mod.rs  reorder.rs  stream.rs
src/sync/: cancel.rs  mod.rs  sys.rs
src/util/: cache_padded.rs  mod.rs  sys.rs
tests/: compio_integration.rs  compute_pool.rs  pipeline_integration.rs  scope_integration.rs
