[package]
categories   = ["concurrency"]
description  = "High-performance data-first pipelines with fused CPU stages and streaming async IO"
edition      = "2024"
exclude      = ["/docs", "/.github", "/AGENTS.md", "/.opencode", "/.vscode", "/examples"]
keywords     = ["parallel", "pipeline", "concurrency", "map-reduce", "work-stealing"]
license      = "Apache-2.0"
name         = "youpipe"
readme       = "README.md"
repository   = "https://github.com/lxl66566/youpipe"
rust-version = "1.85"
version      = "0.3.2"

[features]
default       = ["tokio-runtime"]
tokio-runtime = ["tokio"]
# ── Optional permanent instrumentation (zero-cost when off) ──
# `hotpath` is an optional dependency; when none of these features are enabled
# the `#[cfg_attr(feature = "hotpath", hotpath::measure)]` probes are stripped at
# parse time and the crate is not compiled into the build at all — production
# builds pay nothing. Flip the feature on to turn the probes into real
# per-function timing/alloc/CPU profiling without re-running `perf`.
#
# NOTE: youpipe's `hotpath` feature must forward to `hotpath/hotpath`, otherwise
# the hotpath crate stays in its `lib_off` mode where every macro is a no-op.
hotpath       = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
hotpath-cpu   = ["hotpath", "hotpath/hotpath-cpu"]

[dependencies]
concurrent-queue = "2.5"
crossfire        = "3.1"
hotpath          = { version = "0.19", optional = true }
parking_lot      = "0.12"
st3              = "0.4"
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }

[dev-dependencies]
criterion         = "0.8"
crossbeam-channel = "0.5"
rayon             = "1"
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }

# Single codegen unit for release builds. A project whose value proposition is
# per-item throughput cannot tolerate the code-layout lottery that
# `codegen-units = 16` (the Cargo default) triggers: an unrelated edit
# elsewhere in the crate shifts LLVM's codegen-unit partitioning, which
# reshuffles the hot-path instruction layout, which silently regresses the
# leaf loop's auto-vectorization. We measured this directly while deleting an
# unused `runtime/` module (no behaviour change, ~18% regression at
# sync_cpu_heavy/100k that vanished the moment the code was reinstated).
# `codegen-units = 1` makes such phantom regressions impossible at the cost of
# slower release builds — the standard trade-off for perf-first crates
# (rayon, crossbeam, etc. all do the same).
[profile.release]
codegen-units = 1

[[bench]]
harness = false
name    = "sync_vs_rayon"

[[bench]]
harness = false
name    = "async_vs_tokio"

[[bench]]
harness = false
name    = "mixed_load"

[[bench]]
harness = false
name    = "unbalanced"

[[bench]]
harness = false
name    = "io_async"

# One-shot profiling driver: builds only with `--features hotpath`. Sets up the
# HotpathGuard, runs a representative `pipe().map().collect()` workload, and
# dumps a structured report. See docs/PERF_NOTES.md (#1).
[[example]]
name              = "hotpath_profile"
required-features = ["hotpath"]

# Examples that exercise `.stage_async` / `.with_async_pool` — only buildable
# when the tokio runtime is enabled.
[[example]]
name              = "async_io"
required-features = ["tokio-runtime"]

[[example]]
name              = "mixed_cpu_io"
required-features = ["tokio-runtime"]
